# subgen-v2

./: .gitignore  README.md  RELEASE_CHECKLIST.md  REPO_DESCRIPTION.md  pyproject.toml  run_v2.ps1  subgen-gui.spec  subgen.sample.json
scripts/: build_exe.ps1  compare_presets.py
src/subgen/: alignment.py  audio.py  calibration.py  cli.py  config.py  errors.py  grouper.py  gui.py  logging_utils.py  pipeline.py  runner.py  segmentation.py  srt_writer.py  text_normalization.py  timeline.py  transcriber.py  types.py  vad.py  wav_io.py
src/subgen_v2/: align.py  audio.py  cli.py  config.py  debug.py  draft_asr.py  pipeline.py  review.py  srt.py  subtitle.py  text.py  types.py  vad.py
tests/: test_alignment.py  test_calibration.py  test_cli_config.py  test_cli_preset.py  test_grouper.py  test_pipeline_report.py  test_pipeline_shift.py  test_runner.py  test_srt.py  test_subgen_v2_align.py  test_subgen_v2_cli.py  test_subgen_v2_debug.py  test_subgen_v2_subtitle.py  test_text_normalization.py  test_timeline.py  test_timeline_onset.py  test_timeline_split.py  test_types.py
tests/subgen_v2/: test_align.py  test_cli.py  test_review.py  test_subtitle.py
